--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://api.lietkid.com.cn'
+VUE_APP_BASE_API = 'https://api.elietkid.com.cn'
 
